# HealthLedgerSelector

./: .gitignore  .replit  LICENSE  Pasted--DLT-Grupo-de-Algoritmo-Algoritmo-de-Consenso-Caso-de-Uso-Desafios-e-Limita-es-Refer-ncia-Bibliogr--1729592834887.txt  Pasted--DLT-Tipo-de-DLT-Estrutura-de-Dados-Grupo-de-Algoritmo-Algoritmo-de-Consenso-Estudo-de-Uso-Desafios--1730620109346.txt  Pasted--DLT-Tipo-de-DLT-Grupo-de-Algoritmo-Algoritmo-de-Consenso-Caso-de-Uso-Desafios-e-Limita-es-Refer-nc-1730616006831.txt  Pasted--Grupo-Tipos-DLTs-Nome-DLT-Algoritmos-de-Consenso-Caracter-sticas-Estudo-de-uso-Alta-Seguran-a-e-Con-1729506154043.txt  Pasted--Perguntas-que-o-sistema-faz-para-determinar-o-tipo-de-DLT-e-o-algoritmo-de-consenso-questions--1729162107026.txt  Pasted-1-Precis-o-Accuracy-Visualiza-o-Gr-fico-de-Barras-comparando-acertos-e-erros-Explica-o-A-prec-1730096584377.txt  Pasted-1-Seguran-a-40-Justificativa-A-seguran-a-dos-dados-primordial-no-setor-de-sa-de-dado-o-volum-1729594470053.txt  Pasted-3-6-PROCEDIMENTOS-DE-AN-LISE-DA-APLICA-O-Para-assegurar-que-o-framework-SeletorDLTSaude-ofere-a--1730104661304.txt  Pasted-Aqui-est-a-tabela-com-os-links-substitu-dos-pelos-endere-os-completos-seguindo-o-formato-ABNT-DL-1729992111183.txt  Pasted-AttributeError-Series-object-has-no-attribute-columns-Traceback-File-home-runner-HealthLedge-1730627824440.txt  Pasted-AttributeError-Series-object-has-no-attribute-columns-Traceback-File-home-runner-HealthLedge-1730633795164.txt  Pasted-def-create-progress-animation-current-phase-answers-questions-phases-Aplica-o-Conse-1730554577240.txt  (+29 more)
(+1 files in other folders)
