[project]
name = "repl-nix-healthledgerselector"
version = "0.1.0"
description = "Aplicação para seleção de tecnologia DLT para o setor de saúde"
requires-python = ">=3.11"

# Lista de dependências necessárias
dependencies = [
    "bcrypt>=4.2.0",           # Para criptografia de senhas
    "graphviz>=0.20.3",        # Para visualizações gráficas de diagramas e fluxos
    "pandas>=2.2.3",           # Manipulação de dados e análise
    "plotly>=5.24.1",          # Criação de gráficos interativos
    "requests>=2.32.3",        # Para fazer requisições HTTP (por exemplo, buscar atualizações de notícias)
    "streamlit>=1.39.0",       # Framework para construção da interface do usuário
    "sqlite3>=3.0.0",          # Banco de dados embutido para armazenar dados localmente
    "scikit-learn>=1.3.0",     # Para modelos de machine learning e análise de métricas
    "openpyxl>=3.1.0",         # Para exportar dados em formato Excel, se necessário
]
